<resources>
    <string name="app_name">Mrs.Mua</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="sing_up">Sing Up</string>
    <string name="mrs_mua">Mrs. Mua</string>
    <string name="email_or_user_name">Email or User Name</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_with">Hoặc đăng nhập với</string>
    <string name="password">Password</string>
    <string name="re_password">Re Password</string>
    <string name="passwords">Password</string>
    <string name="home">Trang chủ</string>
    <string name="blog">Tin tức</string>
    <string name="menu">Thực đơn</string>
    <string name="order">Đặt bàn</string>
    <string name="setting">Cài đặt</string>

    <string name="search_bar">Search Bar</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="introStarHme">Tiếp tục như khách vãng lai</string>
    <string name="login">Đăng nhập</string>
    <string name="intro_reservation">Quý khách nên đặt chỗ trước 4 giờ để được phục vụ tốt nhất!</string>
    <string name="reservation">Đặt bàn</string>
    <string name="name">Họ tên</string>
    <string name="Email">Địa chỉ Email</string>
    <string name="date_order">Ngày đặt</string>
    <string name="phone">Số điện thoại</string>
    <string name="addcontent">Nội dung thêm</string>
    <string name="ten_mon_an">Ten mon an</string>
    <string name="clickbuy">Mua ngay</string>
    <string name="next">Tiếp theo</string>
    <string name="Return">Quay lại</string>
    <string name="newsp">Món ăn mới nhất</string>
    <string name="giaiquyet">Giải quyết các vấn đề liên quan đến :</string>
    <string name="lienhe">Liên hệ</string>
    <string name="donhang">Đơn hàng</string>
    <string name="datban">Đặt bàn</string>
    <string name="title">Title</string>
    <string name="decription">decription</string>
    <string name="admin">Admin</string>
    <string name="danhsach">Danh sách bài viết</string>
    <string name="binhluan">Bình luận</string>
    <string name="baivietlienqua">Bài viết liên quan</string>
    <string name="cart">Giỏ hàng</string>
    <string name="sellectall">Chọn tất cả</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="d">0 đ</string>
    <string name="tatol">Giá</string>
    <string name="enter_email">Nhập email của bạn</string>
    <string name="Login">Đăng nhập</string>
    <string name="regter">Đăng ký</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="trung_blogger">Trung Blogger</string>
    <string name="list_cmt">Danh sách bình luận</string>
    <string name="xem_ngay">Xem ngay</string>
    <string name="s_i_g_n_h_m_nay_m_a">Sài Gòn Hôm Nay Mưa</string>
    <string name="name_product">Tên món</string>
    <string name="date">13-06-2022</string>
    <string name="done">Hoàn thành</string>
    <string name="infor_detel">THÔNG TIN CHI TIẾT</string>
    <string name="_3_s_n_ph_m">3 sản phẩm</string>
    <string name="_0">0</string>
    <string name="sdt">sdt</string>
    <string name="address">Địa chỉ</string>
    <string name="history_transaction">Lịch sử đơn hàng</string>
    <string name="id">id</string>
    <string name="edit_ìnor">Thay đổi thông tin</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="dangcity">Thành phố Đà Nẵng</string>
    <string name="_84_0000000">+84 0000000</string>
    <string name="logout">Đằng xuất</string>
    <string name="_1_3">1/3 :</string>
    <string name="choose_date">Vui lòng chọn ngày.</string>
    <string name="_2_3">2/3 :</string>
    <string name="choose_timepeople">Nhập số người sẻ đến và thời gian cụ thể.</string>
    <string name="specific_time">Thời gian cụ thể</string>
    <string name="_3_3">3/3 :</string>
    <string name="your_details">Vui lòng điền thông tin của bạn và nội dung thêm.</string>
    <string name="Quang_Noodles">Mì Quảng</string>
    <string name="Quang_origin">Miền tự hào xứ Quảng</string>
    <string name="c_c_m_n_m_qu_ng">Các Món Mì Quảng</string>
    <string name="total_cart">Tổng giỏ hàng:</string>
    <string name="Pay">Thanh toán</string>
    <string name="news">Tin tức</string>
    <string name="ng_nh_p_nh_n_th_m_u_i">Chào mừng bạn đến với nhà hàng!</string>
    <string name="Forgot_password">Quên mật khẩu</string>
    <string name="Register">Đăng ký</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="enter_name">Nhập tên của bạn</string>
    <string name="Delivery_address">Địa chỉ giao hàng</string>
    <string name="th_m_a_ch_hi_n_t_i_c_a_b_n_t_m_n_n_t_c_a_h_ng">Thêm địa chỉ hiện tại của bạn để đặt món ăn từ cửa hàng!</string>
    <string name="no_adddress">Chưa có địa chỉ</string>
    <string name="Shipping_information">Thông tin vận chuyển</string>
    <string name="name_phone">Tên và số điện thoại</string>
    <string name="cart_information">Thông tin giỏ hàng</string>
    <string name="Total_tems">Tổng số món:</string>
    <string name="total_many">Tổng cộng số tiền</string>
    <string name="Cancel_transaction">Hủy giao dịch</string>
    <string name="noodle_is">Mì quảng là...</string>
    <string name="comment">Bình luận</string>
    <string name="addto_cart">Thêm vào giỏ hàng</string>
    <string name="desception">Mô tả :</string>
    <string name="danang_date">Đà Nẵng, 31/05/2022</string>
    <string name="ch_n_a_ch_giao_h_ng">Chọn địa chỉ giao hàng *</string>
    <string name="l_a_ch_n_ph_ng_th_c_giao_h_ng">Lựa chọn phương thức giao hàng</string>
    <string name="note_de">Ghi chú vận chuyển</string>
    <string name="note">Ghi chú (Có thể trống)</string>
    <string name="summary_cart">Tóm tắt giỏ hàng</string>
    <string name="gi_h_ng">Giỏ hàng:</string>
    <string name="v_n_chuy_n">Vận chuyển:</string>
    <string name="to_n_b">Toàn bộ:</string>
    <string name="add">Thêm</string>
    <string name="ng_h_m_s_nh">Đường/hẻm, số nhà*</string>
    <string name="h_v_t_n">Họ và tên*</string>
    <string name="s_i_n_tho_i">Số điện thoại*</string>
    <string name="go_home">Trở về trang chủ</string>
    <string name="condition_transaction">Xem trình trạng hóa đơn</string>
    <string name="n_h_ng_c_a_b_n_c_t">Đặt hàng thành công!</string>
    <string name="vui_long">Chúng tôi đang chuẩn bị và giao hàng đến bạn trong thời gian sớm nhất!!</string>
    <string name="account">Tài khoản</string>
</resources>