<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    tools:context=".activity.SuccessfulTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="732dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/successful" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:text="@string/n_h_ng_c_a_b_n_c_t"
            android:textColor="@color/bg_screen2"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_italic"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:padding="15dp"
            android:text="@string/vui_long"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_detail_transaction"
            android:layout_width="253dp"
            android:layout_height="48dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/bg_btn_login1"
            android:fontFamily="@font/roboto_black"
            android:text="@string/condition_transaction"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_gohome"
            android:layout_width="253dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_login2"
            android:fontFamily="@font/roboto_black"
            android:text="@string/go_home"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>