<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activity.NewActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/div_footer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/done"
                        android:textColor="#8BC34A"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_tgl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/specific_time"
                        android:textSize="16sp"
                        android:textColor="@color/dark" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_transaction_product" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/Shipping_information"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/tv_infor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/name_phone"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/dark"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/address"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/dark"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cart_information"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/Total_tems"
                                android:fontFamily="@font/roboto_medium"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_totalShopping"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.5"
                                android:text="@string/d"
                                android:fontFamily="@font/roboto_bold"
                                android:textColor="@color/dark"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/total_many"
                                android:fontFamily="@font/roboto_medium"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tv_total"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.5"
                                android:text="@string/d"
                                android:fontFamily="@font/roboto_bold"
                                android:textColor="@color/dark"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/div_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F3F3F3" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/yellow_btn_background"
                android:text="@string/Cancel_transaction"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>