<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartScreenActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:id="@+id/imgPostImage"
        android:layout_width="match_parent"
        android:layout_height="537dp"
        android:layout_marginBottom="58dp"
        android:adjustViewBounds="true"
        android:background="@drawable/start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/dn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_nh_p_nh_n_th_m_u_i"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_prosesLogin"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_login1"
            android:text="@string/login"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_gohome"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:background="@drawable/bg_btn_login2"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/introStarHme"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</RelativeLayout>